--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version": 3,
     "description": "Extension for currency conversion",
     "action": {
-        "default_icon": "icon.webp",
+        "default_icon": "icon.png",
         "default_popup": "index.html"
     }
 }
