--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,9 @@
     "manifest_version": 3,
     "description": "Extension for currency conversion",
     "action": {
-        "default_icon": "icon.png",
+        "icons": {
+            "16": "icon.png"
+        },
         "default_popup": "index.html"
     }
 }
